Fix round 23 adversarial findings